# ish

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.test  EPSH-INTEGRATION.md  INITIAL-PLAN.md  Makefile  README.md  fish-shell.md  init.md
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
benches/: bench.rs
docs/: SEARCH.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_config.rs  fuzz_expand.rs  fuzz_glob.rs  fuzz_history.rs  fuzz_input.rs  fuzz_line.rs  fuzz_math.rs  fuzz_parse.rs
scripts/: import-fish-history
src/: alias.rs  builtin.rs  complete.rs  config.rs  denv.rs  denv_stdlib.sh  error.rs  exec.rs  expand.rs  finder.rs  frecency.rs  history.rs  input.rs  job.rs  lib.rs  line.rs  ls.rs  main.rs  math.rs  parse.rs  path.rs  prompt.rs  render.rs  signal.rs  sys.rs  term.rs
tests/: integration.rs  pty.rs
