[package]
name = "ish"
version = "0.0.0"
edition = "2024"

[dependencies]
epsh = "0.0.6"
rustix = { version = "1.1.4", features = ["event", "fs", "pipe", "process", "runtime", "system", "termios", "time"] }
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
